Print button changes for UM and default versions.Fixed layout issue with no-tab guide

--- a/assets/css/public/default.css
+++ b/assets/css/public/default.css
@@ -253,7 +253,7 @@ img {
     padding: 0;
     font-size: 10pt;   
     border-radius: 5px;
-    margin: 1em 0;
+    margin: 1em 1em;
 
 }
 
@@ -328,7 +328,7 @@ img {
 /* Tabs */
 #tab-body.no-tabs { 
     margin: 0;
-    padding: 0;
+    padding: 50px 0 0 0;
 }
 
 #tab-container {margin: 50px 0 0 0; padding: 0;}
@@ -337,43 +337,47 @@ img {
 
 /* Print Dialog */
 
+
 div.printer_tabs { /* Print button on guide with tabs */
     margin: 0;  
     background-color: transparent;
     position: absolute;
-    top:6px;
-    right: 4px;
+    top:-55px !important;
+    right: 290px;
 }
 
 div.printer_no_tabs { /* Print button on guide with NO tabs */
-    margin: 0;  
-    background-color: transparent;
-    text-align: right;
+    margin: 0 0 0 5px;  
+     background-color: transparent;
+    position: absolute;
+    top: 0 !important;
+    right: 290px;
+
 
 }
 
 .print-img-tabs, .print-img-tabs:hover { 
-    background-image: url("../../images/printer.png");
+    background-image: url("../../images/printer-default.png");
     background-repeat: no-repeat;
-    background-position: 10% 50%;
+    background-position: 50% 65%;
     cursor: pointer;    
-    padding: 4px 10px 4px 30px;
-    font-size: 14px;   
+    padding: 2px 5px;
     background-color: #333 !important; 
-    color: #FFF !important; 
-    opacity: 0.6;
+    border-radius: 8px;
+    border: none;
+    opacity: .6;
 }
 
 .print-img-no-tabs, .print-img-no-tabs:hover { 
-    background-image: url("../../images/printer.png");
+    background-image: url("../../images/printer-default.png");
     background-repeat: no-repeat;
-    background-position: 12% 50%;
+    background-position: 50% 65%;
     cursor: pointer;    
-    padding: 8px 10px 4px 32px;
-    font-size: 1.0em;  
-    color: #FFF !important; 
+    padding: 2px 6px;
     background-color: #333 !important; 
-    opacity: 0.6;
+    border-radius: 8px;
+    border: none;
+    opacity: .6;
 }
 
 .printDialog {
